--- a/index(gdz).html
+++ b/index(gdz).html
@@ -110,7 +110,7 @@
             <a class="mova" href="./index.html">	
             Головна</a>
             <br><br>
-            <img class="icon" src="./book 8 class/3816444671_w640_h640_algebra-8-klas.webp" width="120px">
+            <img class="icon" src="./book 8 class/Т470385У-400-552.jpg" width="120px">
             <br><br>
             <a class="mova" href="https://4book.org/gdz-reshebniki-ukraina/8-klas/2426-gdz-otvety-reshebnik-fizika-8-klas-bar-yakhtar-2016">4Book<a>
             <br><br>
