--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
 <!-- Історія України -->
     <div class="container">
         <h2 class="text">
-            <a class="mova" href="http://surl.li/kuokv">	
+            <a class="mova" href="https://docs.google.com/document/d/e/2PACX-1vTNeAEUyXk8kSpR7WcyNYJFYf_QEcdI2N0XpBQBt8YQQYBGJ63rb-T5q7gpMt6PPGtf7Qc-e-MWDczz/pub">	
             Історія України</a>
             <br><br>
-            <a href="http://surl.li/kuokv"><img class="icon" src="./icon/free-icon-history-4650547.png" width="140px"></a>
+            <a href="https://docs.google.com/document/d/e/2PACX-1vTNeAEUyXk8kSpR7WcyNYJFYf_QEcdI2N0XpBQBt8YQQYBGJ63rb-T5q7gpMt6PPGtf7Qc-e-MWDczz/pub"><img class="icon" src="./icon/free-icon-history-4650547.png" width="140px"></a>
             <br><br>
             <a class="mova" href=""></a>
             <br><br>
             <a class="mova" href="https://drive.google.com/file/d/12oWt6QOjqYZjfdmS4LbRrylbhsK_POKY/view?usp=drive_link">Книжка</a>
             <br><br>
-            <a class="mova" href="https://us05web.zoom.us/j/87139660195?pwd=UEl5VG9OaWZ3U3pSejZmN1hmbUsyUT09">Посилання на урок</a>
+            <a class="mova" href="">Посилання на урок</a>
         </h2>
     </div> 
 <!-- Всесвітня історія -->
     <div class="container">
         <h2 class="text">
-            <a class="mova" href="http://surl.li/kuolb">	
+            <a class="mova" href="https://docs.google.com/document/d/e/2PACX-1vRQUfcWRp2t9ycyGLjbi2mPcTal4YMJ5rMWMnDHJoL7uJMh7YJJNALWmxe5qVNsM3DHzhgVmJf8hqDq/pub">	
             Всесвітня історія</a>
             <br><br>
-            <a href="http://surl.li/kuolb"><img class="icon" src="./icon/free-icon-history-book-7514333.png" width="140px"></a>
+            <a href="https://docs.google.com/document/d/e/2PACX-1vRQUfcWRp2t9ycyGLjbi2mPcTal4YMJ5rMWMnDHJoL7uJMh7YJJNALWmxe5qVNsM3DHzhgVmJf8hqDq/pub"><img class="icon" src="./icon/free-icon-history-book-7514333.png" width="140px"></a>
             <br><br>
             <a class="mova" href=""></a>
             <br><br>
