--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 <!-- Біологія -->
     <div class="container">
         <h2 class="text">
-            <a class="mova" href="http://surl.li/kuoqe">	
+            <a class="mova" href="https://docs.google.com/document/d/e/2PACX-1vS5hNi7IFAjG2mCBewbYRGPgNsKtlLg2dpksYXf3U0KMwTjdTHRKWnRsoCMYqf55YctoehpibDYkvVW/pub">	
             Біологія</a>
             <br><br>
-            <a href="http://surl.li/kuoqe"><img class="icon" src="./icon/free-icon-biology-4833041.png" width="140px"></a>
+            <a href="https://docs.google.com/document/d/e/2PACX-1vS5hNi7IFAjG2mCBewbYRGPgNsKtlLg2dpksYXf3U0KMwTjdTHRKWnRsoCMYqf55YctoehpibDYkvVW/pub"><img class="icon" src="./icon/free-icon-biology-4833041.png" width="140px"></a>
             <br><br>
             <a class="mova" href="./index(gdz).html">ГДЗ</a>
             <br><br>
